# mlx-speech-server

./: .gitignore  CLAUDE.md  README.md  README_zh.md  cli.py  main.py  pyproject.toml
app/: audio.py  cli.py  config.py  formatters.py  registry.py  server.py  service.py  whisper_language.py  worker.py
app/api/: audio.py  models.py  queue.py
app/handlers/: base.py  whisper.py
app/schemas/: audio.py  common.py
docs/human/: chat-example.md
docs/plans/: 2026-04-01-whisper-language-normalization-design.md  2026-04-01-whisper-language-normalization.md
docs/superpowers/plans/: 2026-03-31-cli-subcommands.md  2026-03-31-mlx-speech-server.md  2026-04-01-service-dual-install-support.md
docs/superpowers/specs/: 2026-03-31-cli-subcommands-design.md  2026-03-31-mlx-speech-server-design.md
scripts/: service.sh
tests/: conftest.py  test_audio.py  test_cli.py  test_config.py  test_formatters.py  test_registry.py  test_schemas.py  test_service.py  test_whisper_language.py  test_worker.py
tests/api/: test_audio.py  test_models.py  test_queue.py  test_server.py
tests/handlers/: test_base.py  test_whisper.py
