[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlx-speech-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "mlx-whisper>=0.4",
    "mlx>=0.16",
    "pydantic>=2.0",
    "python-multipart",
    "click>=8.0",
    "loguru>=0.7",
]

[project.scripts]
mlx-speech-server = "main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["app"]
